# finalproject_Zaremba_M25-555

./: README.md  final_project_zaremba.cast  pyproject.toml
data/: portfolios.json  rates.json  users.json
valutatrade_hub/: decorators.py  logging_config.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
valutatrade_hub/infra/: settings.py
valutatrade_hub/parser_service/: api_clients.py  config.py  updater.py
