[project]
name = "finalproject-zaremba-m25-555"
version = "0.1.0"
description = "Платформа для отслеживания и симуляции торговли валютами"
authors = [
    {name = "Stepan Zaremba",email = "212485sz@mail.ru"}
]
readme = "README.md"

[tool.poetry]
 packages = [
     { include = "valutatrade_hub" },
]
[tool.poetry.dependencies]
python = ">=3.12"
prettytable = "^3.10.0"


 
[tool.poetry.scripts]
project = "valutatrade_hub.cli.interface:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []


[dependency-groups]
dev = [
    "ruff (>=0.14.11,<0.15.0)"
]
