[project]
name = "finalproject-zaremba-m25-555"
version = "0.1.0"
description = "Платформа для отслеживания и симуляции торговли валютами"
authors = [
    {name = "Stepan Zaremba",email = "212485sz@mail.ru"}
]
readme = "README.md"

[tool.poetry]
 packages = [
     { include = "valutatrade_hub" },
]
[tool.poetry.dependencies]
python = ">=3.12"
prettytable = "^3.10.0"
requests = "^2.32.5"
python-dotenv = "^1.2.1"


 
[tool.poetry.scripts]
project = "valutatrade_hub.cli.interface:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []


[dependency-groups]
dev = [
    "ruff (>=0.14.11,<0.15.0)"
]

[tool.valutatrade]
#секция для конфигурации проекта

data_path = 'data'
users_filename = 'users.json'
portfolios_filename = 'portfolios.json'
rates_filename = 'rates.json'

#настраиваем, сколько будет жить кэш курсов (в сек)
rates_ttl_seconds = 300  

#логирование (ии, извините, сложная для понимания тема)
log_file_path = 'logs/app.log'
log_format = '%(asctime)s - %(name)s - %(levelname)s - %(message)s'
